--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
