--- a/app/package.json
+++ b/app/package.json
@@ -3,19 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.1.0",
+    "@react-pdf/renderer": "^4.3.0",
+    "@tanstack/react-query": "^5.75.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
