--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,8 @@
     "class-variance-authority": "^0.7.1",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -34,7 +36,8 @@
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
